--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="BLOG">
+
 </head>
 <body>
+    <a href="blog.html">Go to Blog</a>
     <!-- headings -->
     <h1>heading 1</h1> 
     <p><strong><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus hic earum fugit perferendis molestiae voluptatem distinctio. Animi illo <b>quod</b> vel dolores cumque perferendis architecto nemo voluptate sequi corporis tempora cupiditate iste praesentium possimus laborum fuga voluptates, assumenda ea laboriosam <i>delectus</i> deserunt doloremque aperiam quisquam mollitia. Recusandae quod accusantium nisi optio, odio laborum tenetur tempore nostrum magnam voluptates cum dolores corporis!</em></strong></p>
     
 
-    <h1>heading 2</h1>
+    <h1>heading</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis, voluptate excepturi nisi laboriosam dolores consectetur saepe ducimus? Doloribus reprehenderit deleniti quia corporis perferendis cumque numquam, dicta laboriosam dolorem. Porro nisi est, officia suscipit commodi eligendi ratione veniam optio perspiciatis omnis! Repudiandae soluta natus quis ratione illum ullam ducimus culpa incidunt facilis nesciunt libero laborum nulla sit delectus, iusto autem. Beatae!</p>
     <h3>FIVE FAVORITE FIGHTING STYLES</h3>
     <ol>
